--- a/requirements.txt
+++ b/requirements.txt
@@ -1,55 +1,54 @@
-aiohttp==3.13.2; python_version < "3.9"
-aiohttp==3.13.2; python_version >= "3.9"
-blinker==1.9.0
-bson==0.5.10
-cryptography==46.0.3
-dnspython==2.8.0
-dnstwist==20250130
-domcheck==1.1.4
-email-validator==2.3.0
-email_split==1.0.0
-fastapi==0.120.4
-feedgen==1.0.0
-feedgenerator==2.2.1
-gcloud==0.18.3
-geoip2==5.1.0
-google-cloud-datastore==2.21.0
-google-cloud-pubsub==2.33.0
-gunicorn==23.0.0
-httpx==0.28.1
-idna==3.11
-ipaddress==1.0.23
-itsdangerous==2.2.0
-jinja2==3.1.6
-lxml==6.0.2
-mailjet_rest==1.5.1
-openai==2.6.1
-ppdeep==20250625
-pydantic==2.12.3
-python-dateutil==2.9.0.post0
-python-jose==3.5.0
-python-multipart==0.0.20
-python-whois==0.9.6
-pyyaml==6.0.3
-PySocks==1.7.1
-redis==7.0.1
-requests==2.32.5
-simplejson==3.20.2
-slowapi==0.1.9
-starlette==0.49.2
-tld==0.13.1
-typing-extensions==4.15.0
-ua-parser==1.0.1
-user-agents==2.2.0
-urllib3==2.5.0
-uvicorn==0.38.0
-validate-email==1.3
-validators==0.35.0
-whois==1.20240129.2
+aiohttp>=3.13.2
+blinker
+bson
+cryptography>=46.0.0
+dnspython>=1.16.0
+dnstwist
+domcheck
+email-validator
+email_split
+fastapi>=0.68.0
+feedgen
+feedgenerator
+gcloud
+geoip2
+google-cloud-datastore
+google-cloud-pubsub
+gunicorn
+httpx
+idna>=2.8
+ipaddress
+itsdangerous
+jinja2>=3.1.5
+lxml
+mailjet_rest
+openai
+ppdeep>=20200505
+pydantic>=1.8.0
+python-dateutil
+python-jose
+python-multipart>=0.0.9
+python-whois
+pyyaml>=6.0.2
+PySocks
+redis>=4.5.0
+requests>=2.32.3
+simplejson
+slowapi
+starlette>=0.14.0
+tld>=0.9.1
+typing-extensions>=4.0.0
+ua-parser
+user-agents
+urllib3>=2.5.0
+uvicorn>=0.15.0
+validate-email
+validators
+whois
 # py-tlsh
 # py-tlsh>=4.5.0
 # ssdeep
 
 # Testing dependencies
-pytest==8.4.2
+pytest>=7.4.0
 atheris>=2.3.0
