🔒 security: Upgraded requirements.txt imports to fix vulnerabilities

--- a/requirements.txt
+++ b/requirements.txt
@@ -14,13 +14,13 @@ gcloud
 geoip2
 google-cloud-datastore
 google-cloud-pubsub
-gunicorn
-httpx
-idna>=2.8
+gunicorn>=22.0.0
+httpx>=0.23.0
+idna>=3.7
 ipaddress
 itsdangerous
 jinja2>=3.1.4
-lxml
+lxml>=4.6.5
 mailjet_rest
 openai
 ppdeep>=20200505
@@ -31,11 +31,11 @@ python-multipart>=0.0.9
 python-whois
 pyyaml>=6.0.2
 PySocks
-redis>=4.5.0
+redis>=4.5.3
 requests>=2.32.3
 simplejson
 slowapi
-starlette>=0.14.0
+starlette>=0.27.0
 tld>=0.9.1
 typing-extensions>=4.0.0
 ua-parser
