--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,8 @@ dnstwist
 domcheck
 email-validator
 email_split
-fastapi>=0.68.0
-feedgen
+fastapi>=0.109.1
+feedgen>=0.9.0
 feedgenerator
 gcloud
 geoip2
@@ -26,16 +26,16 @@ openai
 ppdeep>=20200505
 pydantic>=1.10.13
 python-dateutil
-python-jose
+python-jose>=3.4.0
 python-multipart>=0.0.18
 python-whois
 pyyaml>=6.0.2
 PySocks
 redis>=4.5.4
-requests>=2.32.3
-simplejson
+requests>=2.32.4
+simplejson>=2.6.1
 slowapi
-starlette>=0.27.0
+starlette>=0.49.1
 tld>=0.9.1
 typing-extensions>=4.0.0
 ua-parser
